add paragraph to code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit harum voluptas a voluptatum quae saepe soluta dicta facere numquam, excepturi ullam corrupti velit quia quaerat inventore deleniti, asperiores corporis totam. 
+
+    </p>
 </body>
 
 
