--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit harum voluptas a voluptatum quae saepe soluta dicta facere numquam, excepturi ullam corrupti velit quia quaerat inventore deleniti, asperiores corporis totam. 
 
     </p>
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact us</li>
+    </ul>
 </body>
 
 
